; ModuleID = '/home/carl/AnghaBench/jerryscript/jerry-core/ecma/builtin-objects/extr_ecma-builtin-object-prototype.c_ecma_builtin_object_prototype_object_property_is_enumerable.c'
source_filename = "/home/carl/AnghaBench/jerryscript/jerry-core/ecma/builtin-objects/extr_ecma-builtin-object-prototype.c_ecma_builtin_object_prototype_object_property_is_enumerable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ECMA_PROPERTY_GET_NO_OPTIONS = common dso_local global i32 0, align 4
@ECMA_PROPERTY_TYPE_NOT_FOUND = common dso_local global i64 0, align 8
@ECMA_PROPERTY_TYPE_NOT_FOUND_AND_STOP = common dso_local global i64 0, align 8
@ECMA_VALUE_FALSE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*)* @ecma_builtin_object_prototype_object_property_is_enumerable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ecma_builtin_object_prototype_object_property_is_enumerable(i32* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i64, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = load i32*, i32** %5, align 8
  %9 = load i32, i32* @ECMA_PROPERTY_GET_NO_OPTIONS, align 4
  %10 = call i64 @ecma_op_object_get_own_property(i32* %7, i32* %8, i32* null, i32 %9)
  store i64 %10, i64* %6, align 8
  %11 = load i64, i64* %6, align 8
  %12 = load i64, i64* @ECMA_PROPERTY_TYPE_NOT_FOUND, align 8
  %13 = icmp ne i64 %11, %12
  br i1 %13, label %14, label %22

14:                                               ; preds = %2
  %15 = load i64, i64* %6, align 8
  %16 = load i64, i64* @ECMA_PROPERTY_TYPE_NOT_FOUND_AND_STOP, align 8
  %17 = icmp ne i64 %15, %16
  br i1 %17, label %18, label %22

18:                                               ; preds = %14
  %19 = load i64, i64* %6, align 8
  %20 = call i32 @ecma_is_property_enumerable(i64 %19)
  %21 = call i32 @ecma_make_boolean_value(i32 %20)
  store i32 %21, i32* %3, align 4
  br label %24

22:                                               ; preds = %14, %2
  %23 = load i32, i32* @ECMA_VALUE_FALSE, align 4
  store i32 %23, i32* %3, align 4
  br label %24

24:                                               ; preds = %22, %18
  %25 = load i32, i32* %3, align 4
  ret i32 %25
}

declare dso_local i64 @ecma_op_object_get_own_property(i32*, i32*, i32*, i32) #1

declare dso_local i32 @ecma_make_boolean_value(i32) #1

declare dso_local i32 @ecma_is_property_enumerable(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
